# tom-cv

./: .gitignore  CMakeLists.txt  Documentation.txt  License_and_Installation_Readme.txt
BoWSLAM/: .cdtbuild_initial  .cproject  .project  BoWSLAM development plan  CMakeLists.txt  README  cg_command  gp_command  hg_command  suppressions-hg  suppressions-vg  vg_command  viewLog
BoWSLAM/BoWSLAM_Main/: BoWSLAM.cpp  FixEPS.cpp  FixEPS.h  autotest.cpp  autotest.h  bowslamParams.h  cImageSimulator.cpp  cImageSimulator.h  fullRelPose.cpp  fullRelPose.h  newgui.h  plot.cpp  plot.h  scaleOptimiser.cpp  scaleOptimiser.h  slamMap.cpp  slamMap.h  structSizeParams.h  svdScaleOptimiser.h  threeDPointCollection.h  tune.cpp
BoWSLAM/SlamConfig2/: tunedConfig2.cfg
BoWSLAM/config/: Params_RIPatch.cfg  Params_RIPatch_VP.cfg  params5-3-2.cfg
BoWSLAM/config/oldConfig/: 3loops.cfg  AlbertB.cfg  BestTunedJul6.cfg  Cars-Tu.cfg  June23GSCorridorConfig.cfg  Sim.cfg  SuperConfig.cfg  TunedJul1.cfg  TunedJul13.cfg  TunedJul14-4903.cfg  TunedJul14-5132.cfg  TunedJul14.cfg  TunedJul15.cfg  TunedJul16-hi.cfg  TunedJul16.cfg  TunedJul17-adjusted.cfg  TunedJul17.cfg  TunedJul2.cfg  TunedJul23.cfg  TunedJul3.cfg  TunedJul6.cfg  TunedJul7.cfg  TunedJul8.cfg  TunedJul8_Speedup.cfg  TunedJun24.cfg  TunedJun25.cfg  TunedJun26.cfg  TunedJun29-2.cfg  TunedJun29.cfg  TunedJun30.cfg  cars-grey.cfg  defaultPatch.cfg  defaultPatch_chris.cfg  newLC.cfg  newLC_chris.cfg  params19-1.cfg  params22-1-forSim.cfg  params22-1.cfg  params26-1.cfg  params26-1_original.cfg  (+10 more)
BoWSLAM/tune/: params.tsv
BoW_Windows_Wrapper/: Readme.txt  main_FileIO.cpp
ShowIm/: .cproject  .project  CMakeLists.txt
ShowIm/src/: ShowIm.cpp
bagOfWords/: .cproject  .project  CMakeLists.txt
bagOfWords/bow/: BoW.h  bagOfWords.cpp  bagOfWords.h  bagOfWordsParam.h  scales.h  stat.h
bowExample/: CMakeLists.txt  bowExample.cpp  bow_imu_params.h
bowSpeedometer/: .cproject  .project  CMakeLists.txt
bowSpeedometer/scale/: BoWSpeedo.h  EdgeScaleObserver.cpp  EdgeScaleObserver.h  ScaleMLE.cpp  ScaleMLE.h  bowSpeedoParams.h
cameraGeom/: .cproject  .project  CMakeLists.txt  cameraGeom.project
cameraGeom/geom/: EssentialMatGoldStandard.cpp  alignPoints.cpp  alignPoints.h  cameras.ipp  closestPoint.h  fixedPolylineOptimisation.h  geom.cpp  geom.h  geom_eigen.h  imageUtil.cpp  imageUtil.h  levMarNumerical.cpp  levMarNumerical.h  lines.cpp  lines.h  lines.ipp  maximumSubarray.cpp  maximumSubarray.h  mvNormalSampler.cpp  mvNormalSampler.h  newCamera.cpp  newCamera.h  optimiseGA.h  pointAlignment.cpp  pointAlignment.h  pointWithThickness.h  polyline.cpp  polyline.h  polyline.ipp  reconstruct3d.cpp  reconstruct3d.h  refine3d.cpp  svm_wrapper.cpp  svm_wrapper.h  svm_wrapper_test.cpp  threadpool.cpp  threadpool.h  threeDPoint.cpp  vectorAngles.cpp  vectorAngles.h  (+2 more)
cmake/: FindBOARD.cmake
featureDescription/: .cproject  .project  CMakeLists.txt
featureDescription/description/: Histogram.h  HistogramDescriptor.h  compoundDescriptor.h  descriptor.h  descriptorClustering.cpp  descriptorClustering.h  descriptorMetricSpace.cpp  descriptor_noTemplates.cpp  patch.h  patchDescriptor.h  patchFactory.h  patchParams.h  vectorDescriptor.h  vectorDescriptorFactory.h
featureExtract/: .cproject  .project  CMakeLists.txt
featureExtract/featureExtract/: PatchFeatureExtractor.cpp  PatchFeatureExtractor.h  SURFFeatureExtractor.cpp  SURFFeatureExtractor.h  cornerDetector.h  featureExtractor.cpp  featureExtractor.h  featureExtractorFactory.cpp  surfFeature.h
featureMatching/: CMakeLists.txt
featureMatching/featureMatching/: guidedFeatureMatching.cpp  guidedFeatureMatching.h
fullModel/: catchment_setup_params.cpp  catchment_setup_params.h  flow_measurements.cpp  flow_measurements.h  fullModel.project  lm_block_model.cpp  lm_block_model.h  lm_block_model_subcatchment.cpp  lm_block_model_subcatchment.h  main.cpp  main.h  model_base.cpp  model_base.h  subcatchment_base.h  subcatchment_params.cpp  subcatchment_params.h
guidedMatchingTest/: testMatching.cpp  testRANSAC.cpp
hydrologicalModel/: OneDModel.cpp  flowUtil.h  flowsAndStores.h  graphbase.h  hydrologicalModel.project  subcatchment.h
image/: .cproject  .project  CMakeLists.txt  image.project
image/image/: HSI.cpp  HSI.h  convert_OpenCV.cpp  convert_OpenCV.h  drawEllipse.cpp  drawEllipse.h  imageAccess.h  imageMat.h
imageSource/: .cproject  .project  CMakeLists.txt
imageSource/imageSource/: imageSource.cpp  imageSource.h  imageSourceFromDir.cpp  imageSourceFromDir.h  imageSourceFromVideo.cpp  imageSourceFromVideo.h
logging/: CMakeLists.txt  logging.project
logging/logging/: PR.h  function_timer.cpp  function_timer.h  imageViewUI.cpp  imageViewUI.h  imageViewUI_int.h  prfxstream.cpp  prfxstream.h  redirectCout.cpp  redirectCout.h
mosaicing/: .cproject  .project  CMakeLists.txt  Doxygen project file  README  default.cfg  gcc command debug
params/: .cproject  .project  CMakeLists.txt  ParamDoc.html  params.project
ransac/: .cproject  .project  CMakeLists.txt
ransacAndRefine/: CMakeLists.txt  main.cpp
ransacTest/: .cproject  .project  BB.cpp  CMakeLists.txt  camPosRefinementResults.tsv  camPosRefinementResultsTrans.tsv  cg_command  example.cpp  threeDPointAlignment.cpp
timelapse/: main.cpp  timelapse.project
timing/: .cproject  .project  CMakeLists.txt  timing.project
util/: .cproject  .project  CMakeLists (copy).txt  CMakeLists.txt  util.project
(+175 files in other folders)
